@@ -1,5 +1,6 @@
 package com.indref.industrial_reforged.util.capabilities;
 
+import com.google.common.collect.ImmutableMap;
 import com.indref.industrial_reforged.api.capabilities.IOActions;
 import it.unimi.dsi.fastutil.Pair;
 import net.minecraft.core.Direction;
@@ -7,8 +8,8 @@ import net.minecraft.core.Direction;
 import java.util.Map;
 
 public final class SidedCapUtils {
-    public static Map<Direction, Pair<IOActions, int[]>> allInsert(int ...slots) {
-        return Map.of(
+    public static ImmutableMap<Direction, Pair<IOActions, int[]>> allInsert(int ...slots) {
+        return ImmutableMap.of(
                 Direction.NORTH, Pair.of(IOActions.INSERT, slots),
                 Direction.EAST, Pair.of(IOActions.INSERT, slots),
                 Direction.SOUTH, Pair.of(IOActions.INSERT, slots),
@@ -18,8 +19,8 @@ public final class SidedCapUtils {
         );
     }
 
-    public static Map<Direction, Pair<IOActions, int[]>> allExtract(int ...slots) {
-        return Map.of(
+    public static ImmutableMap<Direction, Pair<IOActions, int[]>> allExtract(int ...slots) {
+        return ImmutableMap.of(
                 Direction.NORTH, Pair.of(IOActions.EXTRACT, slots),
                 Direction.EAST, Pair.of(IOActions.EXTRACT, slots),
                 Direction.SOUTH, Pair.of(IOActions.EXTRACT, slots),
